hphp/hack/test/typecheck/needs_concrete/needs_concrete_on_constructor_1.php
<?hh

abstract class A {
  <<__NeedsConcrete>>
  public function __construct() {
  }
}
